--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,19 @@
   text-align: center;
 }
 
+button {
+  padding: 10px 20px;
+  font-size: larger;
+  border-color: blueviolet;
+  border-radius: 10px;
+  
+}
+
+.dark-mode {
+  color: #fff;
+  background-color: #313843;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
