--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,12 @@ button {
   border-radius: 10px;
   
 }
+.card {
+  border-radius: 10px;
+  border: 2px solid palevioletred;
+  width: 400px;
+  margin: 5px auto;
+}
 
 .dark-mode {
   color: #fff;
